--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,19 @@
-<mat-toolbar color="primary">
-  <span>Br1</span>
-  <span class="spacer"></span>
-  <button mat-icon-button aria-label="Sign in">
-    <mat-icon>login</mat-icon>
-  </button>
-</mat-toolbar>
+<header>
+  <mat-toolbar color="primary">
+    <span>Br1</span>
+    <span class="spacer"></span>
+    <button mat-icon-button aria-label="Sign in">
+      <mat-icon>login</mat-icon>
+    </button>
+  </mat-toolbar>
+</header>
+<main class="container">
+  <nav mat-tab-nav-bar mat-align-tabs="center">
+    <ng-container *ngFor="let tab of tabs">
+      <a mat-tab-link [routerLink]="tab.route" [disabled]="tab.disabled" [active]="tab.route === activeTab.route">
+        {{ tab.label }}
+      </a>
+    </ng-container>
+  </nav>
+  <router-outlet></router-outlet>
+</main>
