Add evernote test url and create firebase files

--- a/src/app/home/journal/journal.component.html
+++ b/src/app/home/journal/journal.component.html
@@ -7,4 +7,7 @@
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
   </div>
+  <div class="row">
+    <iframe [src]="entryUrl | safe" frameborder="0"></iframe>
+  </div>
 </div>
