--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,37 @@
+$profile-pic-size: 8vw;
+
+.center {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.profile {
+  &-picture {
+    border-radius: 50%;
+    position: relative;
+    margin-bottom: 10px;
+    width: $profile-pic-size;
+    height: $profile-pic-size;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+
+.row {
+  h2,
+  mat-hint {
+    margin-bottom: 10px;
+    text-align: center;
+    width: 100%;
+  }
+}
+
 .spacer {
   flex: 1 1 auto;
 }
