--- a/src/app/home/journal/journal.component.html
+++ b/src/app/home/journal/journal.component.html
@@ -1,13 +1,10 @@
 <div class="container">
   <div class="row datepicker">
-    <mat-form-field appearance="fill">
+    <mat-form-field class="example-full-width" appearance="fill">
       <mat-label>Choose a date</mat-label>
       <input matInput [matDatepicker]="picker" />
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
+      <mat-datepicker touchUi #picker></mat-datepicker>
     </mat-form-field>
-  </div>
-  <div class="row">
-    <iframe [src]="entryUrl | safe" frameborder="0"></iframe>
   </div>
 </div>
