Update datepicker styles to keep calendar always open

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,3 +52,16 @@ body {
 .row {
   width: 100%;
 }
+
+.cdk-overlay-container {
+  position: static;
+
+  .cdk-overlay-backdrop {
+    background-color: transparent;
+  }
+
+  .cdk-global-overlay-wrapper {
+    align-items: start !important;
+    position: static;
+  }
+}
