--- a/src/app/home/journal/journal.component.html
+++ b/src/app/home/journal/journal.component.html
@@ -4,7 +4,7 @@
       <mat-label>Choose a date</mat-label>
       <input matInput [matDatepicker]="picker" />
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker touchUi #picker></mat-datepicker>
+      <mat-datepicker touchUi #picker [opened]="showCalendar"></mat-datepicker>
     </mat-form-field>
   </div>
 </div>
