--- a/src/app/home/journal/journal.component.html
+++ b/src/app/home/journal/journal.component.html
@@ -1,10 +1,5 @@
 <div class="container">
-  <div class="row datepicker">
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Choose a date</mat-label>
-      <input matInput [matDatepicker]="picker" />
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker touchUi #picker [opened]="showCalendar"></mat-datepicker>
-    </mat-form-field>
+  <div class="row">
+    <app-calendar></app-calendar>
   </div>
 </div>
