Rename some methods

--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -6,56 +6,37 @@
         color="primary"
         mwlCalendarPreviousView
         [view]="view"
-        [(viewDate)]="viewDate"
+        [(viewDate)]="openedDate"
         (viewDateChange)="onViewDateChange()"
       >
         Previous
       </button>
-      <button mat-flat-button color="primary" mwlCalendarToday [(viewDate)]="viewDate">Today</button>
+      <button mat-flat-button color="primary" mwlCalendarToday [(viewDate)]="openedDate">Today</button>
       <button
         mat-flat-button
         color="primary"
         mwlCalendarNextView
         [view]="view"
-        [(viewDate)]="viewDate"
+        [(viewDate)]="openedDate"
         (viewDateChange)="onViewDateChange()"
       >
         Next
       </button>
     </div>
     <div class="container actions-center">
-      <h1>{{ viewDate | calendarDate: view + "ViewTitle":"en" }}</h1>
+      <h1>{{ openedDate | calendarDate: view + "ViewTitle":"en" }}</h1>
     </div>
   </div>
-  <div [ngSwitch]="view">
+  <div>
     <mwl-calendar-month-view
-      *ngSwitchCase="CalendarView.Month"
-      [viewDate]="viewDate"
+      [viewDate]="openedDate"
       [events]="events"
       [refresh]="refresh"
-      [activeDayIsOpen]="isActiveDayOpen"
-      (dayClicked)="dayClicked($event.day)"
-      (eventClicked)="handleEvent('Clicked', $event.event)"
+      [activeDayIsOpen]="isTodayOpen"
+      (dayClicked)="onDayClick($event)"
+      (eventClicked)="onEventClick($event)"
       (eventTimesChanged)="eventTimesChanged($event)"
     >
     </mwl-calendar-month-view>
-    <mwl-calendar-week-view
-      *ngSwitchCase="CalendarView.Week"
-      [viewDate]="viewDate"
-      [events]="events"
-      [refresh]="refresh"
-      (eventClicked)="handleEvent('Clicked', $event.event)"
-      (eventTimesChanged)="eventTimesChanged($event)"
-    >
-    </mwl-calendar-week-view>
-    <mwl-calendar-day-view
-      *ngSwitchCase="CalendarView.Day"
-      [viewDate]="viewDate"
-      [events]="events"
-      [refresh]="refresh"
-      (eventClicked)="handleEvent('Clicked', $event.event)"
-      (eventTimesChanged)="eventTimesChanged($event)"
-    >
-    </mwl-calendar-day-view>
   </div>
 </div>
