Create blog entry creation form

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,9 +2,7 @@
   <mat-toolbar>
     <!-- <span>Br1</span> -->
     <span class="spacer"></span>
-    <button mat-icon-button aria-label="Sign in">
-      <mat-icon>login</mat-icon>
-    </button>
+    <button mat-button aria-label="Sign in">Sign In</button>
   </mat-toolbar>
 </header>
 <main class="container">
