--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -29,9 +29,10 @@
   </div>
   <div>
     <mwl-calendar-month-view
-      [viewDate]="openedDate"
-      [events]="events"
       [activeDayIsOpen]="isTodayOpen"
+      [events]="events"
+      [viewDate]="openedDate"
+      [refresh]="refreshCalendar"
       (dayClicked)="onDayClick($event)"
       (eventClicked)="onEventClick($event)"
     >
