--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -1,30 +1,30 @@
 <div class="row">
   <div class="row actions">
-    <div class="container actions-left">
+    <div class="container calendar-month">
+      <h1>{{ selectedDate | calendarDate: calendarView + "ViewTitle":"en" }}</h1>
+    </div>
+    <div class="container calendar-view-btns">
       <button
-        mat-stroked-button
+        mat-mini-fab
         color="primary"
         mwlCalendarPreviousView
         [view]="calendarView"
         [(viewDate)]="selectedDate"
         (viewDateChange)="showEventsAccordion = false"
       >
-        Previous
+        <mat-icon>arrow_left</mat-icon>
       </button>
-      <button mat-stroked-button color="primary" mwlCalendarToday [(viewDate)]="selectedDate">Today</button>
+      <button mat-flat-button color="primary" mwlCalendarToday [(viewDate)]="selectedDate">Today</button>
       <button
-        mat-stroked-button
+        mat-mini-fab
         color="primary"
         mwlCalendarNextView
         [view]="calendarView"
         [(viewDate)]="selectedDate"
         (viewDateChange)="showEventsAccordion = false"
       >
-        Next
+        <mat-icon>arrow_right</mat-icon>
       </button>
-    </div>
-    <div class="container actions-center">
-      <h1>{{ selectedDate | calendarDate: calendarView + "ViewTitle":"en" }}</h1>
     </div>
   </div>
   <div>
