Turn calendar flat button to raised button

--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -14,7 +14,7 @@
       >
         <mat-icon>arrow_left</mat-icon>
       </button>
-      <button mat-flat-button color="primary" mwlCalendarToday [(viewDate)]="selectedDate">Today</button>
+      <button mat-raised-button color="primary" mwlCalendarToday [(viewDate)]="selectedDate">Today</button>
       <button
         mat-mini-fab
         color="primary"
