Add journal-entry-table component

--- a/src/app/home/admin-panel/admin-panel.component.html
+++ b/src/app/home/admin-panel/admin-panel.component.html
@@ -1,3 +1,5 @@
 <div class="container">
-  <app-journal-entry-form [showPreview]="true"></app-journal-entry-form>
+  <div class="row">
+    <app-journal-entry-table></app-journal-entry-table>
+  </div>
 </div>
