--- a/src/app/home/admin-panel/journal-entry-table/journal-entry-table.component.html
+++ b/src/app/home/admin-panel/journal-entry-table/journal-entry-table.component.html
@@ -1,25 +1,30 @@
 <h1>Journal</h1>
 <mat-divider></mat-divider>
-<h2>Entries</h2>
-<mat-table [dataSource]="data">
+<div class="row">
+  <h2>Entries</h2>
+  <div class="table-actions">
+    <button mat-raised-button color="primary" (click)="onCreateEntry()">Create Entry</button>
+  </div>
+</div>
+<mat-table [dataSource]="tableData">
   <ng-container matColumnDef="name">
     <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
     <mat-cell *matCellDef="let item">{{ item.name }}</mat-cell>
   </ng-container>
   <ng-container matColumnDef="date">
     <mat-header-cell *matHeaderCellDef>Date</mat-header-cell>
-    <mat-cell *matCellDef="let item">{{ item.date }}</mat-cell>
+    <mat-cell *matCellDef="let item">{{ item.date | date: "longDate" }}</mat-cell>
   </ng-container>
   <ng-container matColumnDef="url">
-    <mat-header-cell *matHeaderCellDef>URL</mat-header-cell>
-    <mat-cell *matCellDef="let item">{{ item.url }}</mat-cell>
+    <mat-header-cell *matHeaderCellDef>Note Link</mat-header-cell>
+    <mat-cell *matCellDef="let item"><a [href]="item.url" target="_blank">See note</a></mat-cell>
   </ng-container>
   <ng-container matColumnDef="actions">
     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
     <mat-cell *matCellDef="let item">
       <div>
-        <button mat-icon-button color="primary"><mat-icon>edit</mat-icon></button>
-        <button mat-icon-button color="warn"><mat-icon>delete</mat-icon></button>
+        <button mat-icon-button color="primary" (click)="onEditEntry(item)"><mat-icon>edit</mat-icon></button>
+        <button mat-icon-button color="warn" (click)="onDeleteEntry(item)"><mat-icon>delete</mat-icon></button>
       </div>
     </mat-cell>
   </ng-container>
