--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -1,31 +1,34 @@
 <div class="row">
-  <div class="row actions">
-    <div class="container calendar-month">
+  <div class="row header">
+    <div class="container calendar-info">
+      <h3>Categories</h3>
+      <div *ngFor="let category of categories" class="category">
+        <div class="row">
+          <div class="dot" [ngStyle]="{ backgroundColor: category.color }"></div>
+          <p>{{ category.name | toDisplayName }}</p>
+        </div>
+      </div>
       <h1>{{ selectedDate | calendarDate: calendarView + "ViewTitle":"en" }}</h1>
     </div>
-    <div class="container calendar-view-btns">
-      <button
-        mat-mini-fab
-        color="primary"
+    <mat-button-toggle-group class="actions">
+      <mat-button-toggle
         mwlCalendarPreviousView
         [view]="calendarView"
         [(viewDate)]="selectedDate"
         (viewDateChange)="showEventsAccordion = false"
       >
         <mat-icon>arrow_left</mat-icon>
-      </button>
-      <button mat-raised-button color="primary" mwlCalendarToday [(viewDate)]="selectedDate">Today</button>
-      <button
-        mat-mini-fab
-        color="primary"
+      </mat-button-toggle>
+      <mat-button-toggle mwlCalendarToday [(viewDate)]="selectedDate">Today</mat-button-toggle>
+      <mat-button-toggle
         mwlCalendarNextView
         [view]="calendarView"
         [(viewDate)]="selectedDate"
         (viewDateChange)="showEventsAccordion = false"
       >
         <mat-icon>arrow_right</mat-icon>
-      </button>
-    </div>
+      </mat-button-toggle>
+    </mat-button-toggle-group>
   </div>
   <div>
     <mwl-calendar-month-view
