--- a/src/app/home/admin-panel/journal-entry-form/journal-entry-form-dialog.component.html
+++ b/src/app/home/admin-panel/journal-entry-form/journal-entry-form-dialog.component.html
@@ -27,6 +27,16 @@
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
+    <mat-form-field>
+      <mat-label>Type</mat-label>
+      <mat-select formControlName="categoryId">
+        <mat-select>
+          <mat-option *ngFor="let category of categories$ | async" [value]="category.id">
+            {{ category.name | toDisplayName }}
+          </mat-option>
+        </mat-select>
+      </mat-select>
+    </mat-form-field>
     <button mat-flat-button color="primary" type="submit" [disabled]="!entryForm.valid">
       {{ editMode ? "Update" : "Create" }}
     </button>
