--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -78,7 +78,7 @@ $dot-size: 12px;
 
       .category {
         display: flex;
-        justify-content: start;
+        justify-content: flex-start;
 
         .row {
           align-items: center;
@@ -102,7 +102,7 @@ $dot-size: 12px;
 
       .category {
         display: flex;
-        justify-content: start;
+        justify-content: flex-start;
 
         .row {
           align-items: center;
