--- a/src/app/home/admin-panel/journal-entry-form/journal-entry-form-dialog.component.html
+++ b/src/app/home/admin-panel/journal-entry-form/journal-entry-form-dialog.component.html
@@ -30,11 +30,9 @@
     <mat-form-field>
       <mat-label>Type</mat-label>
       <mat-select formControlName="categoryId">
-        <mat-select>
-          <mat-option *ngFor="let category of categories$ | async" [value]="category.id">
-            {{ category.name | toDisplayName }}
-          </mat-option>
-        </mat-select>
+        <mat-option *ngFor="let category of categories" [value]="category.id">
+          {{ category.name | toDisplayName }}
+        </mat-option>
       </mat-select>
     </mat-form-field>
     <button mat-flat-button color="primary" type="submit" [disabled]="!entryForm.valid">
