Replace profile pic

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
 <main class="container">
   <div class="row center">
     <div class="profile-picture">
-      <img src="assets/images/profilePic.jpeg" alt="Br1" />
+      <img src="assets/images/profilePic.jpg" alt="Br1" />
     </div>
     <h2>{{ profile.firstname + " " + profile.lastname }}</h2>
     <mat-hint>{{ profile.description }}</mat-hint>
