Replace network links with anchor tags

--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -126,7 +126,7 @@ $dot-size: 12px;
 
       .category {
         display: flex;
-        justify-content: start;
+        justify-content: flex-start;
 
         .row {
           align-items: center;
