--- a/src/app/home/social/social.component.html
+++ b/src/app/home/social/social.component.html
@@ -2,18 +2,14 @@
   <h1>Networks</h1>
   <div class="row">
     <div class="list">
-      <mat-action-list>
-        <button
-          mat-list-item
-          *ngFor="let item of networks"
-          (click)="open(item.url)"
-          [matTooltip]="item.tooltip"
-          matTooltipPosition="above"
-        >
-          <mat-icon>{{ item.icon }}</mat-icon>
-          <div mat-line>{{ item.name }}</div>
-        </button>
-      </mat-action-list>
+      <mat-nav-list>
+        <mat-list-item *ngFor="let item of networks" [matTooltip]="item.tooltip" matTooltipPosition="above">
+          <a matLine [href]="item.url" target="_blank">{{ item.name }}</a>
+          <button mat-icon-button>
+            <mat-icon>{{ item.icon }}</mat-icon>
+          </button>
+        </mat-list-item>
+      </mat-nav-list>
     </div>
   </div>
 </div>
