--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -1,34 +1,32 @@
 <div class="row">
   <div class="row header">
     <div class="container calendar-info">
-      <h3>Categories</h3>
-      <div *ngFor="let category of categories" class="category">
-        <div class="row">
-          <div class="dot" [ngStyle]="{ backgroundColor: category.color }"></div>
-          <p>{{ category.name | toDisplayName }}</p>
-        </div>
-      </div>
       <h1>{{ selectedDate | calendarDate: calendarView + "ViewTitle":"en" }}</h1>
     </div>
-    <mat-button-toggle-group class="actions">
-      <mat-button-toggle
-        mwlCalendarPreviousView
-        [view]="calendarView"
-        [(viewDate)]="selectedDate"
-        (viewDateChange)="showEventsAccordion = false"
-      >
-        <mat-icon>arrow_left</mat-icon>
-      </mat-button-toggle>
-      <mat-button-toggle mwlCalendarToday [(viewDate)]="selectedDate">Today</mat-button-toggle>
-      <mat-button-toggle
-        mwlCalendarNextView
-        [view]="calendarView"
-        [(viewDate)]="selectedDate"
-        (viewDateChange)="showEventsAccordion = false"
-      >
-        <mat-icon>arrow_right</mat-icon>
-      </mat-button-toggle>
-    </mat-button-toggle-group>
+    <div class="actions">
+      <mat-button-toggle-group>
+        <mat-button-toggle
+          mwlCalendarPreviousView
+          [view]="calendarView"
+          [(viewDate)]="selectedDate"
+          (viewDateChange)="showEventsAccordion = false"
+        >
+          <mat-icon>arrow_left</mat-icon>
+        </mat-button-toggle>
+        <mat-button-toggle mwlCalendarToday [(viewDate)]="selectedDate">Today</mat-button-toggle>
+        <mat-button-toggle
+          mwlCalendarNextView
+          [view]="calendarView"
+          [(viewDate)]="selectedDate"
+          (viewDateChange)="showEventsAccordion = false"
+        >
+          <mat-icon>arrow_right</mat-icon>
+        </mat-button-toggle>
+      </mat-button-toggle-group>
+      <button mat-mini-fab color="basic" (click)="onHelp()">
+        <mat-icon>help_outline</mat-icon>
+      </button>
+    </div>
   </div>
   <div>
     <mwl-calendar-month-view
