--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -32,6 +32,12 @@
   }
 }
 
+.spinner {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
 /* Mobile */
 @media only screen and (max-width: 600px) {
   .header {
