Implement pagination in entry table

--- a/src/app/home/admin-panel/journal-entry-table/journal-entry-table.component.html
+++ b/src/app/home/admin-panel/journal-entry-table/journal-entry-table.component.html
@@ -32,3 +32,10 @@
   <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
   <mat-row *matRowDef="let item; columns: columns"></mat-row>
 </mat-table>
+<mat-paginator
+  [length]="entries.length"
+  [pageSize]="defaultPageSize"
+  [pageSizeOptions]="pageSizeOptions"
+  showFirstLastButtons
+  (page)="tableData.setPage(entries, $event)"
+></mat-paginator>
