Fix some mobile css issues

--- a/src/app/home/admin-panel/journal-entry-table/journal-entry-table.component.scss
+++ b/src/app/home/admin-panel/journal-entry-table/journal-entry-table.component.scss
@@ -1,8 +1,23 @@
-h2 {
-  margin: 16px 0;
+mat-divider {
+  margin-bottom: 15px;
 }
 
 .table-actions {
+  align-items: center;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+
+  h2 {
+    margin: 0;
+  }
+}
+
+mat-table {
+  mat-cell {
+    a {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+  }
 }
