--- a/src/app/home/admin-panel/journal-entry-table/journal-entry-table.component.html
+++ b/src/app/home/admin-panel/journal-entry-table/journal-entry-table.component.html
@@ -1,23 +1,21 @@
 <h1>Journal</h1>
 <mat-divider></mat-divider>
 <div class="row">
-  <h2>Entries</h2>
   <div class="table-actions">
+    <h2>Entries</h2>
     <button mat-raised-button color="primary" (click)="onCreateEntry()">Create Entry</button>
   </div>
 </div>
 <mat-table [dataSource]="tableData">
   <ng-container matColumnDef="name">
     <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
-    <mat-cell *matCellDef="let item">{{ item.name }}</mat-cell>
+    <mat-cell *matCellDef="let item">
+      <a [href]="item.url" target="_blank">{{ item.name }}</a>
+    </mat-cell>
   </ng-container>
   <ng-container matColumnDef="date">
     <mat-header-cell *matHeaderCellDef>Date</mat-header-cell>
-    <mat-cell *matCellDef="let item">{{ item.date | date: "longDate" }}</mat-cell>
-  </ng-container>
-  <ng-container matColumnDef="url">
-    <mat-header-cell *matHeaderCellDef>Note Link</mat-header-cell>
-    <mat-cell *matCellDef="let item"><a [href]="item.url" target="_blank">See note</a></mat-cell>
+    <mat-cell *matCellDef="let item">{{ item.date | date: "shortDate" }}</mat-cell>
   </ng-container>
   <ng-container matColumnDef="actions">
     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
