Create common table component and add category table to admin-panel

--- a/src/app/home/admin-panel/admin-panel.component.html
+++ b/src/app/home/admin-panel/admin-panel.component.html
@@ -1,5 +1,9 @@
 <div class="container">
   <div class="row">
+    <h1>Journal</h1>
+    <mat-divider></mat-divider>
     <app-journal-entry-table></app-journal-entry-table>
+    <mat-divider></mat-divider>
+    <app-calendar-event-category-table></app-calendar-event-category-table>
   </div>
 </div>
