--- a/src/app/home/admin-panel/calendar-event-category-table/calendar-event-category-table.component.html
+++ b/src/app/home/admin-panel/calendar-event-category-table/calendar-event-category-table.component.html
@@ -11,7 +11,10 @@
   </ng-container>
   <ng-container matColumnDef="color">
     <mat-header-cell *matHeaderCellDef>Color</mat-header-cell>
-    <mat-cell *matCellDef="let item">{{ item.color }}</mat-cell>
+    <mat-cell *matCellDef="let item">
+      <span class="dot" [ngStyle]="{ backgroundColor: item.color }"></span>
+      {{ item.color }}
+    </mat-cell>
   </ng-container>
   <ng-container matColumnDef="actions">
     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
