Rename table property

--- a/src/app/home/admin-panel/calendar-event-category-table/calendar-event-category-table.component.html
+++ b/src/app/home/admin-panel/calendar-event-category-table/calendar-event-category-table.component.html
@@ -31,7 +31,7 @@
 </mat-table>
 <mat-paginator
   [length]="records.length"
-  [pageSize]="defaultPageSize"
+  [pageSize]="pageSize"
   [pageSizeOptions]="pageSizeOptions"
   showFirstLastButtons
   (page)="onPageChange($event)"
